# BEC_self_organisation

./: calc_area_of_ft_data.py  calc_energy_from_ft.py  calc_legett_at_t.py  calc_oscill_period_at_t.py  example_submit_command.txt  fourier_utils.py  gen_smf_1d.py  gen_smf_2d.py  patt1d_q_sfm.in  patt1d_q_sfm.py  plot_amplitude.py  plot_density_evolution_at_t.py  plot_density_evolution_at_x.py  plot_ft_at_t.py  plot_ft_at_x.py  plot_ft_density_at_t.py  plot_ft_density_at_x.py  plot_intensity.py  plot_intensity_2d.py  plot_intensity_test2.py  plot_spatial_analysis_graphs_changing_p0.py  plot_spatial_ft_graphs_changing_p0.py  plot_spatial_mod_depth_vs_p0.py  plot_spatial_mod_depth_vs_p0_simple.py  plot_spatial_rms.py  plot_spatial_sd_changing_p0.py  plot_spatial_sd_changing_p0_at_t.py  plot_spatial_span.py  plot_temporal_analysis_graphs_changing_p0_at_x.py  plot_temporal_delay_vs_p0_at_x.py  plot_temporal_ft_graphs_changing_p0_at_x.py  plot_temporal_last_peak_interval_vs_p0_at_x.py  plot_temporal_mod_depth_vs_p0_at_x.py  plot_temporal_sd_changing_p0_at_x.py  plotintens.py  psi.out  pyproject.toml  reindex_p0_outputs.py  run_smf_sweep.sbatch  s.out  (+4 more)
code_documentation/: documentation.aux  documentation.fdb_latexmk  documentation.fls  documentation.out  documentation.tex  documentation.toc
logs/: smf_p0_sweep-13283_0.out  smf_p0_sweep-13283_1.out  smf_p0_sweep-13283_2.out  smf_p0_sweep-13283_3.out  smf_p0_sweep-13283_4.out  smf_p0_sweep-13283_5.out  smf_p0_sweep-13283_6.out  smf_p0_sweep-13353_0.out  smf_p0_sweep-13353_1.out  smf_p0_sweep-13353_10.out  (+641 more)
(+1240 files in other folders)
