[project]
name = "bec-smf"
version = "0.1.0"
description = "SMF BEC self organisation code"
authors = [
    {name = "4YummY2",email = "kelfic22@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pyqt6 (>=6.9.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
